// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly escapes quotes in string values 1`] = `
"generator client {
  option = \\"option \\\\\\"value\\\\\\"\\"
}
"
`;

exports[`prints attribute with arguments 1`] = `
"model Model {
  id  Int @id(true, \\"foo\\", func())
}
"
`;

exports[`prints boolean false option 1`] = `
"datasource db1 {
  option = false
}
"
`;

exports[`prints boolean true option 1`] = `
"datasource db1 {
  option = true
}
"
`;

exports[`prints empty datasource definition 1`] = `
"datasource db1 {
  
}
"
`;

exports[`prints empty document 1`] = `""`;

exports[`prints empty generator definition 1`] = `
"generator client {
  
}
"
`;

exports[`prints empty model 1`] = `
"model Model {
  
}
"
`;

exports[`prints field 1`] = `
"model Model {
  field  Int
}
"
`;

exports[`prints field attribute 1`] = `
"model Model {
  id  Int @id
}
"
`;

exports[`prints field with array type 1`] = `
"model Model {
  array  Int[]
}
"
`;

exports[`prints field with optional type 1`] = `
"model Model {
  array  Int?
}
"
`;

exports[`prints function call option 1`] = `
"generator client {
  option = func()
}
"
`;

exports[`prints function call with argument 1`] = `
"generator client {
  option = func(\\"function argument\\")
}
"
`;

exports[`prints function call with multiple arguments 1`] = `
"generator client {
  option = func(\\"function argument\\", true, false)
}
"
`;

exports[`prints multiple attributes 1`] = `
"model Model {
  field  Int @first @second
}
"
`;

exports[`prints multiple fields while aligning the types 1`] = `
"model Model {
  short    Int
  loooong  String
}
"
`;

exports[`prints multiple options 1`] = `
"datasource db1 {
  option1 = false
  option2 = \\"some option\\"
}
"
`;

exports[`prints nested function call 1`] = `
"generator client {
  option = outer(inner(\\"parameter\\"))
}
"
`;

exports[`prints string option 1`] = `
"generator client {
  option = \\"option value\\"
}
"
`;
